LERGO-405 - implementing 'find usage' and showing a notification when editing question that is used by someone else. LERGO-406 - fixed. LERGO-364 - implementing solution suggested at : http://stackoverflow.com/a/25665374/1068746

--- a/app/styles/_questions.scss
+++ b/app/styles/_questions.scss
@@ -200,3 +200,14 @@
 			vertical-align: super;
 		}
 }
+
+
+.update-question-notifications{
+  background: #fcf8e3;
+  display:block;
+  width:700px;
+  margin:0 auto;
+  padding:20px;
+  text-align:center;
+  color:black;
+}
